--- a/VendorOrderTracker/Views/Order/Show.cshtml
+++ b/VendorOrderTracker/Views/Order/Show.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-<h1>Song Details: </h1>
+<h1>Order Details: </h1>
 
 <h2>@Model["order"].Title</h2>
 <h2>@Model["order"].Description</h2>
